# dodgedrone_simulation

dodgelib/include/dodgelib/pilot/: pilot.hpp
dodgelib/include/dodgelib/reference/: velocity_reference.hpp
dodgelib/include/dodgelib/types/: quad_state.hpp
dodgelib/src/pilot/: pilot.cpp
dodgelib/src/reference/: velocity_reference.cpp
dodgelib/src/types/: quad_state.cpp
dodgeros/dodgeros/include/dodgeros/: ros_pilot.hpp
dodgeros/dodgeros/src/: ros_pilot.cpp
dodgeros/dodgeros_msgs/: CMakeLists.txt  package.xml
dodgeros/dodgeros_msgs/msg/: VelCommand.msg
